fix: github icon alignment, copy adjustment, remove storytime

--- a/index.css
+++ b/index.css
@@ -43,6 +43,7 @@ img.github-icon {
   justify-content: center;
   margin: 0.5em 0;
   min-height: 40px;
+  min-width: 40px;
   width: 40px;
 }
 .portfolio-sample {
